--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 html {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 /* Указываем box sizing */
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 /* Убираем внешние отступы */
 h1,
@@ -13,168 +13,182 @@ h2,
 h3,
 h4,
 p,
-ul{
-  margin: 0;
-  padding: 0;
-} 
+ul {
+	margin: 0;
+	padding: 0;
+}
 img {
-    display: block;
-    max-width: 100%;
+	display: block;
+	max-width: 100%;
 }
 :root {
-    --main-background-color:#FFFFFF;
-    --default-text-color:#212121;
-    --action-color:#2196F3;
-    --small-text-color:#757575;
-    --standard-letter-spacing:0.03em;
-    --short-letter-spacing:0.02em;
-    --wide-letter-spacing:0.06em;
+	--main-background-color: #ffffff;
+	--default-text-color: #212121;
+	--action-color: #2196f3;
+	--small-text-color: #757575;
+	--standard-letter-spacing: 0.03em;
+	--short-letter-spacing: 0.02em;
+	--wide-letter-spacing: 0.06em;
 }
 body {
-    font-family: 'Roboto', sans-serif;
-    background: var(--main-background-color);
-    color: var(--default-text-color);
+	font-family: "Roboto", sans-serif;
+	background: var(--main-background-color);
+	color: var(--default-text-color);
 }
 
 /* Удаление маркеров списка */
 .list {
-list-style: none;
+	list-style: none;
 }
 /* Сброс стилей линков */
 .link {
-text-decoration: none;
+	text-decoration: none;
 }
 .visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	margin: -1px;
 }
 .container {
-width: 1200px;
-padding: 0 15px;
-margin: 0 auto;
+	width: 1200px;
+	padding: 0 15px;
+	margin: 0 auto;
 }
-.section{
-    display: flex;
-    justify-content: center;
-    padding: 94px 0;
+.section {
+	display: flex;
+	justify-content: center;
+	padding: 94px 0;
 }
 /* Стили логотипа */
-.header-logo, .footer-logo{
-font-family: 'Raleway';
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-letter-spacing: var(--standard-letter-spacing);
+.header-logo,
+.footer-logo {
+	font-family: "Raleway";
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.19;
+	letter-spacing: var(--standard-letter-spacing);
 }
 .header-logo {
-display: inherit;
-color: #000000;
-width: 145px;
-padding: 24px 0 25px;
-margin-right: 93px;
+	display: inherit;
+	color: #000000;
+	width: 145px;
+	padding: 24px 0 25px;
+	margin-right: 93px;
 }
 .footer-logo {
-display: block;
-color: #FFFFFF;
-margin-bottom: 20px;
+	display: block;
+	color: #ffffff;
+	margin-bottom: 20px;
 }
 
-.header-logo span, .footer-logo span {
-   color: var(--action-color); 
+.header-logo span,
+.footer-logo span {
+	color: var(--action-color);
 }
 /* Стили header */
 .header {
-border-bottom: 1px solid #ECECEC;
+	border-bottom: 1px solid #ececec;
 }
-.header-container{
-display: flex;
-align-items: center;
+.header-container {
+	display: flex;
+	align-items: center;
 }
-.nav, .nav-link{
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: var(--short-letter-spacing);    
+.nav,
+.nav-link {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: var(--short-letter-spacing);
 }
 .nav {
-display: flex;
-column-gap: 50px; 
+	display: flex;
+	column-gap: 50px;
 }
 
 .nav-link {
-color: var(--default-text-color);
+	color: var(--default-text-color);
 }
 
 .current {
-color: var(--action-color);
+	color: var(--action-color);
 }
-.nav-link:hover, .nav-link:focus{
-color: var(--action-color);
-cursor: pointer;
+.nav-link:hover,
+.nav-link:focus {
+	color: var(--action-color);
+	cursor: pointer;
 }
 .header-contact {
-display: inherit;
-margin-left: auto;
-gap: 30px;
+	display: inherit;
+	margin-left: auto;
+	gap: 30px;
 }
-.header-email, .header-tel{
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: var(--short-letter-spacing);
-color: var(--small-text-color); 
+.header-email,
+.header-tel {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: var(--short-letter-spacing);
+	color: var(--small-text-color);
 }
-.header-email:hover, .header-email:focus {
-color: var(--action-color);
-cursor: pointer;
+.header-email:hover,
+.header-email:focus {
+	color: var(--action-color);
+	cursor: pointer;
 }
-.header-tel:hover, .header-tel:focus{
-color: var(--action-color);
-cursor: pointer;
+.header-tel:hover,
+.header-tel:focus {
+	color: var(--action-color);
+	cursor: pointer;
 }
 /*Стили Footer */
 .footer {
-background: #2F303A;
+	background: #2f303a;
 }
 .footer-container {
-    padding-top: 60px;
-    padding-bottom: 60px;
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
 /* .address {
 } */
-.contact-address, .footer-email, .footer-tel{
-font-style: normal;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: var(--standard-letter-spacing);
+.contact-address,
+.footer-email,
+.footer-tel {
+	font-style: normal;
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: var(--standard-letter-spacing);
 }
-.contact-address, .footer-email {
-    display: inherit;
-    margin-bottom: 9px;
+.contact-address,
+.footer-email {
+	display: inherit;
+	margin-bottom: 9px;
 }
 .contact-address {
-color: var(--main-background-color);
+	color: var(--main-background-color);
 }
-.contact-address:hover, .contact-address:focus{
-color: var(--action-color);
+.contact-address:hover,
+.contact-address:focus {
+	color: var(--action-color);
 }
-.footer-email, .footer-tel{
-text-decoration: none;
-color: rgba(255, 255, 255, 0.6);
+.footer-email,
+.footer-tel {
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.6);
 }
-.footer-email:hover, .footer-email:focus {
-color: var(--action-color);
+.footer-email:hover,
+.footer-email:focus {
+	color: var(--action-color);
 }
-.footer-tel:hover, .footer-tel:focus {
-color: var(--action-color);
+.footer-tel:hover,
+.footer-tel:focus {
+	color: var(--action-color);
 }
 /* Стили портфолио */
 /* .portfolio-main {
@@ -182,165 +196,165 @@ color: var(--action-color);
 .portfolio-main-section {
 }*/
 .sort-buttons-list {
-display: flex;
-column-gap: 8px;
-justify-content: center;
-margin-bottom:50px;
-} 
+	display: flex;
+	column-gap: 8px;
+	justify-content: center;
+	margin-bottom: 50px;
+}
 .sort-btn {
-font-family: inherit;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-text-align: center;
-letter-spacing: var(--standard-letter-spacing);
-background: #F5F4FA;
-border-radius: 4px;
-border: 0;
+	font-family: inherit;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.62;
+	text-align: center;
+	letter-spacing: var(--standard-letter-spacing);
+	background: #f5f4fa;
+	border-radius: 4px;
+	border: 0;
 }
-.sort-btn:hover, .sort-btn:focus{
-background: var(--action-color);
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
-cursor: pointer;
-}
-.projects-container{
-
+.sort-btn:hover,
+.sort-btn:focus {
+	background: var(--action-color);
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+	border-radius: 4px;
+	cursor: pointer;
 }
 .project-list {
-display: flex;
-flex-wrap: wrap;
-gap: 30px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 30px;
 }
 .project-card {
-background: var(--main-background-color);
-border: 1px solid #EEEEEE;
-flex-basis: calc((100% - 60px)/3);
+	background: var(--main-background-color);
+	border: 1px solid #eeeeee;
+	flex-basis: calc((100% - 60px) / 3);
 }
-.project-description{
-text-align: left;
-padding: 20px 24px;
+.project-description {
+	text-align: left;
+	padding: 20px 24px;
 }
 .project-name {
-font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: var(--wide-letter-spacing);
-margin-bottom: 4px;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 2;
+	letter-spacing: var(--wide-letter-spacing);
+	margin-bottom: 4px;
 }
 .project-type {
-font-size: 16px;
-line-height: 188%;
-letter-spacing: var(--standard-letter-spacing);
-color: var(--small-text-color);
+	font-size: 16px;
+	line-height: 188%;
+	letter-spacing: var(--standard-letter-spacing);
+	color: var(--small-text-color);
 }
-
 
 /* Стили main index.html */
-.index-main {
-}
 .index-main-section {
-background: #2F303A;
+	background: #2f303a;
 }
-.main-title, .order-button{
-letter-spacing: var(--wide-letter-spacing); 
-color: var(--main-background-color);
+.main-title,
+.order-button {
+	letter-spacing: var(--wide-letter-spacing);
+	color: var(--main-background-color);
 }
-.index-main-container{
-padding-top: 200px;
-padding-bottom: 200px;
-text-align: center;
+.index-main-container {
+	padding-top: 200px;
+	padding-bottom: 200px;
+	text-align: center;
 }
 .main-title {
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-text-transform: uppercase;
-max-width: 696px;
-margin-left: auto;
-margin-right: auto;
-margin-bottom: 30px;
+	font-weight: 900;
+	font-size: 44px;
+	line-height: 1.36;
+	text-transform: uppercase;
+	max-width: 696px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 30px;
 }
 .order-button {
-font-family: inherit;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.88;
-background: var(--action-color);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-border-color: transparent;
-min-width: 216px;
-height: 50px;
-padding-left: auto;
-padding-right: auto;
+	font-family: inherit;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	background: var(--action-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	border-color: transparent;
+	min-width: 216px;
+	height: 50px;
+	padding-left: auto;
+	padding-right: auto;
 }
-.order-button:hover{
-    cursor: pointer;
+.order-button:hover {
+	cursor: pointer;
 }
-.features-list{
-    display: flex;
-    column-gap: 30px;  
+.features-list {
+	display: flex;
+	column-gap: 30px;
 }
 .feature-item {
-    flex-basis: calc((100%-90/4));
+	flex-basis: calc((100%-90 / 4));
 }
-.feature-name, .feature-text{
-font-size: 14px;
-letter-spacing: var(--standard-letter-spacing);   
+.feature-name,
+.feature-text {
+	font-size: 14px;
+	letter-spacing: var(--standard-letter-spacing);
 }
 .feature-name {
-font-weight: 700;
-line-height: 1.14;
-text-transform: uppercase;
+	font-weight: 700;
+	line-height: 1.14;
+	text-transform: uppercase;
 }
 .feature-text {
-line-height: 1.71;
-color: var(--small-text-color);
+	line-height: 1.71;
+	color: var(--small-text-color);
 }
 .work-section {
-    padding-top: 0;
+	padding-top: 0;
 }
-.work-container{
-    text-align: center;
+.work-container {
+	text-align: center;
 }
-.work-title, .staff-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.17;
-letter-spacing: var(--standard-letter-spacing);
-margin-bottom: 50px;
+.work-title,
+.staff-title {
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.17;
+	letter-spacing: var(--standard-letter-spacing);
+	margin-bottom: 50px;
 }
-.work-list, .staff-list {
-display: flex;
-column-gap: 30px;
+.work-list,
+.staff-list {
+	display: flex;
+	column-gap: 30px;
 }
-.work-item{
-    flex-basis: calc((100%-60px)/3);
+.work-item {
+	flex-basis: calc((100%-60px) / 3);
 }
 .staff-section {
-background: #E5E5E5;
+	background: #e5e5e5;
 }
-.staff-container{
-text-align: center;
+.staff-container {
+	text-align: center;
 }
-.staff-item{
-flex-basis: calc((100%-90px)/4);
-background: var(--main-background-color);
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+.staff-item {
+	flex-basis: calc((100%-90px) / 4);
+	background: var(--main-background-color);
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 0px 0px 4px 4px;
 }
-.staff-name, .staff-position{
-font-size: 16px;
-line-height: 1.19;
-letter-spacing: var(--standard-letter-spacing);
+.staff-name,
+.staff-position {
+	font-size: 16px;
+	line-height: 1.19;
+	letter-spacing: var(--standard-letter-spacing);
 }
 .staff-name {
-font-weight: 500;
-margin-top: 30px;
-margin-bottom: 10px;
+	font-weight: 500;
+	margin-top: 30px;
+	margin-bottom: 10px;
 }
 .staff-position {
-color: var(--small-text-color);
-padding-bottom: 30px;
+	color: var(--small-text-color);
+	padding-bottom: 30px;
 }
