--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ img {
 :root {
 	--main-background-color: #ffffff;
 	--default-text-color: #212121;
+	--default-text-color-inverted: #ffffff;
 	--action-color: #2196f3;
 	--small-text-color: #757575;
 	--standard-letter-spacing: 0.03em;
@@ -87,7 +88,7 @@ body {
 }
 .footer-logo {
 	display: inline-block;
-	color: #ffffff;
+	color: var(--default-text-color-inverted);
 	margin-bottom: 20px;
 }
 
@@ -120,14 +121,29 @@ body {
 .nav-link {
 	color: var(--default-text-color);
 }
+.nav-item {
+	position: relative;
+}
+.nav-item.current::after {
+	display: flex;
+	position: absolute;
+	margin-top: 28px;
+	content: "";
+	width: 100%;
+	height: 4px;
+	background-color: #2196f3;
+	border-radius: 2px;
+}
 
-.current {
+.current .nav-link {
 	color: var(--action-color);
 }
 .nav-link:hover,
 .nav-link:focus {
 	color: var(--action-color);
 	cursor: pointer;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contact {
 	display: inherit;
@@ -142,10 +158,14 @@ body {
 .header-email:hover .header-contact-icon,
 .header-email:focus .header-contact-icon {
 	fill: var(--action-color);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-tel:hover .header-contact-icon,
 .header-tel:focus .header-contact-icon {
 	fill: var(--action-color);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-email,
 .header-tel {
@@ -161,11 +181,15 @@ body {
 .header-email:focus {
 	color: var(--action-color);
 	cursor: pointer;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-tel:hover,
 .header-tel:focus {
 	color: var(--action-color);
 	cursor: pointer;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*Стили Footer */
 .footer {
@@ -192,6 +216,8 @@ body {
 .contact-address:hover,
 .contact-address:focus {
 	color: var(--action-color);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-email,
 .footer-tel {
@@ -201,10 +227,14 @@ body {
 .footer-email:hover,
 .footer-email:focus {
 	color: var(--action-color);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-tel:hover,
 .footer-tel:focus {
 	color: var(--action-color);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-contact-list {
 	display: inline-block;
@@ -224,7 +254,7 @@ body {
 	line-height: 16px;
 	letter-spacing: var(--standard-letter-spacing);
 	text-transform: uppercase;
-	color: #ffffff;
+	color: var(--default-text-color-inverted);
 	margin-bottom: 20px;
 	cursor: default;
 }
@@ -242,6 +272,8 @@ body {
 .footer-soc-link:hover,
 .footer-soc-link:focus {
 	background-color: var(--icons-background-color-active);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Стили портфолио */
 /* .portfolio-main {
@@ -269,10 +301,12 @@ body {
 .sort-btn:hover,
 .sort-btn:focus {
 	background: var(--action-color);
-	color: #ffffff;
+	color: var(--default-text-color-inverted);
 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 	border-radius: 4px;
 	cursor: pointer;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project-list {
 	display: flex;
@@ -286,6 +320,33 @@ body {
 .project-card:hover,
 .project-card:focus {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-card:hover .project-description-top {
+	transform: translateY(0%);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-card-link {
+}
+.project-wrap {
+	position: relative;
+	overflow: hidden;
+}
+.project-description-top {
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: translateY(100%);
+	width: 100%;
+	height: 100%;
+	padding: 63px 24px;
+	font-size: 18px;
+	line-height: 1.56;
+	letter-spacing: var(--standard-letter-spacing);
+	color: #ffffff;
+	background: rgba(33, 150, 243, 0.9);
 }
 .project-description {
 	border: 1px solid #eeeeee;
@@ -351,6 +412,8 @@ body {
 .order-button:hover {
 	cursor: pointer;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .features-list {
 	display: flex;
@@ -409,6 +472,27 @@ body {
 }
 .work-item {
 	flex-basis: calc((100%-60px) / 3);
+	position: relative;
+	display: flex;
+}
+.work-name {
+	position: absolute;
+	width: 100%;
+	height: 70px;
+	bottom: 0;
+	left: 0;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(47, 48, 58, 0.8);
+
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: var(--standard-letter-spacing);
+	text-transform: uppercase;
+	color: var(--default-text-color-inverted);
 }
 .staff-section {
 	background: #f5f4fa;
@@ -464,10 +548,14 @@ body {
 .staff-soc-link:hover,
 .staff-soc-link:focus {
 	background-color: var(--icons-background-color-active);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .staff-soc-link:hover .staff-soc-icon,
 .staff-soc-link:focus .staff-soc-icon {
 	fill: var(--icons-color-active);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* --------------------OUR CLIENTS-------------------- */
@@ -477,8 +565,7 @@ body {
 .clients-item {
 	flex-basis: calc((100%-150px) / 6);
 }
-.clients-item:hover,
-.clients-item:focus {
+.clients-item:hover {
 	cursor: pointer;
 }
 .clients-link {
@@ -494,13 +581,70 @@ body {
 }
 .clients-item:hover .clients-icon {
 	fill: var(--icons-background-color-active);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover {
 	border-color: var(--icons-background-color-active);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:focus .clients-icon {
 	fill: var(--icons-background-color-active);
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-item:focus-within {
 	border-color: #2196f3;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* ------------------------MODAL------------------------ */
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+	opacity: 0;
+	pointer-events: none;
+	visibility: hidden;
+}
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(1);
+	min-width: 528px;
+	min-height: 581px;
+	background: #ffffff;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .modal {
+	transform: translate(-50%, -50%) scale(0);
+}
+.closeBtn {
+	position: absolute;
+	right: 8px;
+	top: 8px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	background: #ffffff;
+}
+.closeBtn:hover {
+	cursor: pointer;
+}
+.closeBtn-icon {
 }
